# postcard_creator_ui

./: .dockerignore  api.py  pyproject.toml  streamlit_app.py
.github/workflows/: docker-image.yml
.streamlit/: config.toml
docker/: Dockerfile  run-api.sh  run.sh
k8s/: config-map.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
pages/: 01_list_postcards.py  02_edit_postcard.py  03_send_postcard.py  04_swiss_id_login.py
src/postcard_creator/: enc_token_provider.py  helper.py  postcard_creator.py  postcard_creator_swissid.py  postcard_img_util.py  token.py
